-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.15.0-beta1
-
None
-
-
60f103b681b84ac3ad2513124f7bd9234b4449cc (qt-creator/qt-creator/4.15)
When editing the Initial CMake parameters via the text area in the project build settings, the key jumps to the initial position on each key stroke. Text editing becomes a challenge:
For Gerrit Dashboard: QTCREATORBUG-25410 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
337296,2 | Utils: Keep editing position in StringAspects with TextDisplay | 4.15 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |