Utils: Keep editing position in StringAspects with TextDisplay

Fixes: QTCREATORBUG-25410
Change-Id: I414c90fe679d9f63bfc29361ab753979ff20bfe6
Reviewed-by: Cristian Adam <cristian.adam@qt.io>